Add Games and api modifications
index.html:
- Created a new button for showing all games

- Created a hidden section called games to display a list of game
boards (hidden until user is logged in)

- Added a style block in the <head> to eliminate the flickering of
hidden content on page load

app.js:
- Created an event listener for starting a new game with btn-new-game

- Created an event listener for showing all games

events.js:
- Created an event handler for creating a new game

- Created an event handler for showing all games

- Modified all api calls to use new variable based API call

api.js
- created newGame and showGames functions

- Commented all functions and replaced with a single variable based
api call DRY!  Once more comfortable with this functionality the old
api calls can be deleted

ui.js
displaying a list of games and dates (Mostly for testing purposed to
ensure that I a can get the games list and the API is working properly)

index.scss
- Removed all styling in favor of style block (see index.html entry)

--- a/index.html
+++ b/index.html
@@ -11,6 +11,32 @@
       <!-- Do not add `script` tags-->
       <script src="public/vendor.js" type="text/javascript" charset="utf-8" defer></script>
       <script src="public/application.js" type="text/javascript" charset="utf-8" defer></script>
+
+      <!--- This style block was added here to prevent the flickering of hidden content when the page loads-->
+      <style>
+        #register-form {
+          display: none;
+          opacity: 1;
+        }
+
+        #change-password-form {
+          display: none;
+          opacity: 1;
+        }
+
+        #btn-logout {
+          display: none;
+          opacity: 1;
+        }
+
+        #games {
+          display: none;
+          opacity: 1;
+        }
+      </style>
+
+
+
     </head>
     <body>
       <h1>Project One // Tic-Tac-Toe Game</h1>
@@ -114,6 +140,16 @@
 
         </form>
 
+
+        
+        <!-- Begin Game Board Basics-->
+        <section id="games">
+          <input type="button" id="btn-new-game" value="Start a new Game">
+          <input type="button" id="btn-show-games" value="Show All Games">
+          <p>Here is a list of all your games:</p>
+          <!-- placeholder for list of games -->
+          <ul id="list-of-games"></ul>
+        </section>
 
         
 
