Cleanup for deployment
Tweaked some UI and messages
Removed Console logs in preparation for deployment
consolidated some code and removed unused variables

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
               <li><a href="#" id="btn-logout">logout</a></li>
             </ul>
           </div>
+          <div class="col-12" id="api-failure"></div>
         </div>
       </nav>
   
@@ -303,16 +304,4 @@
 
     </body>
 </html>
-
-
-
-<!--
-  <div class="col-4" style="display: flex;">
-        <p>${game.updatedAt}</p>
-        <p>${game._id}</p>
-        <p>${game.cells}</p>
-        <p>${game.over}</p>
-    </div>
--->
-
 
