--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="row nav">
           <div class="col-12">
             <ul>              
-              <li><a href="#" id="btn-new-game">new game</a></li>
+              <li><a href="#" id="btn-game">current Game</a></li>
               <li><a href="#" id="btn-show-games">show all games</a></li>
               <li><a href="#" id="btn-change-password">change password</a></li>
               <li><a href="#" id="btn-logout">logout</a></li>
@@ -239,7 +239,9 @@
           <div class="container scoreboard-container" id="scoreboard-section">
         
             <div class="row">
-              <div class="col-12 scoreboard scoreboard-top">Scoreboard</div>
+              <div class="col-3 scoreboard scoreboard-top"></div>
+              <div class="col-6 scoreboard scoreboard-top">Scoreboard</div>
+              <div class="col-3 scoreboard scoreboard-top"><a href="#" id="btn-new-game">New Game</a></div>
             </div>            
 
             <div class="row">
